fixing another issue with the overflow of the wrappers

--- a/_code/_promo/_assets/stylesheets/main.scss
+++ b/_code/_promo/_assets/stylesheets/main.scss
@@ -23,6 +23,7 @@
   position: relative;
   width: 100%;
   background: transparent;
+  overflow-y: hidden;
   @media screen and (min-width: $bp-largest) {
     max-width: $bp-largest;
     margin: 0 auto;
